style(css): forme parte de agregar estilos para mejorar la presentación de la interfaz y que las tarjetas se mostraran en carrito

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -126,7 +126,7 @@ body {
   color: deeppink;
 }
 
-/* ================== CARRITO EN TARJETAS ================== */
+/* carrito */
 
 .carrito-contenedor {
   max-width: 1200px;
